fix h1 font size on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -410,6 +410,9 @@ h4 {
     line-height: 115%;
     margin-bottom: 30px;
     font-weight: 700;
+    @media (max-width:600px){
+      font-size: 38px;
+    }
   }
 
   // .main__desc
@@ -541,7 +544,7 @@ h4 {
     background-position: center center;
     background-size: cover;
     @media (max-width: 1199px) {
-      max-height: calc(100vw  / 2);
+      max-height: calc(100vw / 2);
       width: 100%;
     }
   }
@@ -718,7 +721,7 @@ h4 {
   &__title {
     margin-top: 10%;
     margin-bottom: 25px;
-    @media (max-width: 875px){
+    @media (max-width: 875px) {
       margin-top: 0;
     }
   }
@@ -878,41 +881,40 @@ h4 {
 }
 .self-link {
 }
-@media (max-width:460px){
- .lead-btn{
+@media (max-width: 460px) {
+  .lead-btn {
     max-width: calc(100% - 20px);
   }
-  .footer__top{
+  .footer__top {
     flex-direction: column;
     align-items: center;
     gap: 16px;
   }
-  .footer__social{
+  .footer__social {
     margin-left: unset;
   }
-  .footer__bot{
-  text-align: center;
+  .footer__bot {
+    text-align: center;
   }
 }
-@media (max-width:768px){
- .btn{
+@media (max-width: 768px) {
+  .btn {
     margin: 0 auto;
   }
 }
-@media (max-width:400px){
- .swiper, .swiper-1{
+@media (max-width: 400px) {
+  .swiper,
+  .swiper-1 {
     width: 320px;
     height: 350px;
   }
-
 }
-@media (max-width:340px){
-  .navigation__item{
+@media (max-width: 340px) {
+  .navigation__item {
     margin-right: 10px;
   }
 
-  .main__title{
+  .main__title {
     font-size: 40px;
   }
-
 }
